# TextRecognition

./: .gitignore  CMakeLists.txt  Dockerfile  README  README.md
include/: library.h
src/: library.cpp
